--- a/index.htm
+++ b/index.htm
@@ -7,23 +7,26 @@
 </head>
 
 <body>
-  <h1>Manipulate the DOM</h1>
-  <h2>Shoppinglist</h2>
-  <div>
-    <ul id="list">
-      <li id="0" class="unhealthy">Marshmallows</li>
-      <li id="1" class="healthy">Cashew nuts</li>
-      <li id="2" class="unhealthy">Beer</li>
-      <li id="3" class="healthy">Apples</li>
-    </ul>
-  </div>
-  <div>
-    <h2>Shoppinglist UNHEALTHY</h2>
+    <h1>Manipulate the DOM</h1>
+    <h2>Shoppinglist</h2>
+    <div>
+        <ul id="list">
+            <li id="0" class="unhealthy">Marshmallows</li>
+            <li id="1" class="healthy">Cashew nuts</li>
+            <li id="2" class="unhealthy">Beer</li>
+            <li id="3" class="healthy">Apples</li>
+            <li id="4" class="unhealthy">Icecream</li>
+        </ul>
+    </div>
+    <div>
+        <h2>Shoppinglist UNHEALTHY</h2>
+
+        <ul id="listUnhealthy">
+        </ul>
+    </div>
+
     
-    <ul id="listUnhealthy">
-    </ul>
-  </div>
-  
-  <script src="js/index.js"></script>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
